--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,11 @@ code {
   padding-top: 5rem;
   margin: 0 auto;
   width: 600px;
+}
 
+.rm {
+  background: red;
+  border-radius: 50%;
+  color: #fff;
+  border: none;
 }
