--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "~materialize-css/dist/css/materialize.min.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -30,6 +31,39 @@ code {
   text-decoration: line-through;
 }
 
+.todo {
+  margin-bottom: 1rem;
+}
+
+.todo.completed span {
+  text-decoration: line-through;
+}
+
+.todo label {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  background: #f3f3f3;
+  padding: 1rem;
+  
+}
+
+.todo i {
+  z-index: 2;
+  padding: 5px;
+}
+
+.todo i:hover {
+  
+  
+  background-color: lightgrey;
+  border-radius: 50%;
+ 
+}
+
+
 .lds-circle {
   display: inline-block;
   transform: translateZ(1px);
@@ -40,7 +74,7 @@ code {
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  background: blue;
+  background: darkorange;
   animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 @keyframes lds-circle {
@@ -58,3 +92,4 @@ code {
     transform: rotateY(3600deg);
   }
 }
+
